Add img and short description of lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
+    <img src="../img/lasagna.jpg" alt="picture of a lasagna">
+    <p>This is a recipe of my dear friend, with all fresh ingredients. Never had a better lasagna!</p>
 </body>
 </html>
