Add ingredients to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,6 +9,27 @@
 <body>
     <h1>Lasagna</h1>
     <img src="../img/lasagna.jpg" alt="picture of a lasagna">
-    <p>This is a recipe of my dear friend, with all fresh ingredients. Never had a better lasagna!</p>
+    <p>This is a recipe of my dear friend. Never had a better lasagna!</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li><strong>Lasagna noodles</strong> 1 pack </li>
+        <li><strong>Minced meat</strong> 500 g</li>
+        <li><strong>Onions</strong> 1 to 2</li>
+        <li><strong>Garlic gloves</strong> 1 to 2</li>
+        <li><strong>Sieved tomatoes</strong> 1 can</li>
+        <li><strong>Choped tomatoes</strong> 1 can (2 in case there are no sieved ones)</li>
+        <li><strong>Tomato paste</strong> according to taste</li>
+        <li><strong>Salt</strong> according to taste</li>
+        <li><strong>Pepper</strong> according to taste</li>
+        <li><strong>Sugar</strong> according to taste</li>
+        <li><strong>Oregano</strong> according to taste</li>
+        <li><strong>Basil</strong> according to taste</li>
+        <li><strong>Rosemary</strong>, only a bit</li>
+        <li><strong>Flour</strong></li>
+        <li><strong>Butter</strong> 50 g</li>
+        <li><strong>Milk</strong> 600 ml</li>
+        <li><strong>Nutmeg</strong> according to taste</li>
+        <li><strong>Chesse</strong> according to taste</li>
+    </ul>
 </body>
 </html>
