Add steps for the lasagna recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -31,5 +31,18 @@
         <li><strong>Nutmeg</strong> according to taste</li>
         <li><strong>Chesse</strong> according to taste</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Chop the onions and garlic gloves and sweat them in a pan.</li>
+        <li>Add the meat and sear it until it's crumbly.</li>
+        <li>Add the tomato cans and if you want some extra tomato taste add some tomato paste.</li>
+        <li>Add salt, pepper, sugar, oregano, basil and rosemary bit by bit until it tastes good. Then let it simmer while you prepare the bechamel-sauce.</li>
+        <li>Preheat the oven to 200 °C.</li>
+        <li>Melt the butter and then stir in the flour, but take care not to let it go brown.</li>
+        <li>Add the milk bit by bit while you continuously stir until all the milk is added. Keep the temperature high enough to let it simmer, but don't stop stirring or it goes brown.</li>
+        <li>Add nutmeg, pepper, and salt until it tastes good. Now take it off the stove.</li>
+        <li>Take a casserole dish and build the lasagna layers of 1. sauce, 2. lasagna noodles, 3. bechamel-sauce. Continue in this order until the ingredients are used up.</li>
+        <li>Now add some cheese of your choosing on top and put it in the oven for 40 to 60 minutes.</li>
+    </ol>
 </body>
 </html>
