Add ingredients and steps for curry chicken recipe

--- a/recipes/curry-chicken.html
+++ b/recipes/curry-chicken.html
@@ -7,6 +7,38 @@
     <title>Curry Chicken with Coconut and Ananas</title>
 </head>
 <body>
-    
+    <h1>Curry Chicken with Coconut and Ananas</h1>
+    <img src="../img/currychicken.jpg" alt="picture of curry chicken">
+    <p>This is a recipe of my dear friend.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li><strong>Chicken breast</strong> 600 g</li>
+        <li><strong>Snow peas</strong> 250 g</li>
+        <li><strong>Fresh chili peppers</strong> 3</li>
+        <li><strong>Spring onions</strong> 3</li>
+        <li><strong>Ginger</strong> 1 piece</li>
+        <li><strong>Parsley</strong> half a bundle</li>
+        <li><strong>Ananas (Pineapple)</strong> 200 g</li>
+        <li><strong>Garlic gloves</strong> 2</li>
+        <li><strong>Sunflower oil</strong> 5 tablespoons</li>
+        <li><strong>Lemon</strong> 1 fruit</li>
+        <li><strong>Cumin</strong> half a tablespoon</li>
+        <li><strong>Coconut milk</strong> 400 g</li>
+    </ul> 
+    <h2>Steps</h2>
+    <ol>
+        <li>Wash the snow peas and cut them in about 2 cm long pieces.</li>
+        <li>Cut the ananas and chicken breast also in pieces of about 2 cm.</li>
+        <li>Cook the snow peas for about 2 to 5 minutes until they are firm to the bite. Then drain them.</li>
+        <li>Wash the chili peppers and remove the kernels, if you want it less spicy. Then chop them roughly.</li>
+        <li>Wash the spring onions and parsley, peel the garlic and ginger and chop them too.</li>
+        <li>Grate the lemon zest.</li>
+        <li>Purée the chili peppers, spring onions, parsley, garlic, ginger and lemon zest together with 2 tablespoons of the sunflower oil.</li>
+        <li>Heat up 3 tablespoons of sunflower oil in a wok or pot.</li>
+        <li>Sear the chicken breast in the wok for a few minutes then push them to the side.</li>
+        <li>Add the chili paste mix in the middle and sear it for about 3 minutes.</li>
+        <li>Add the snow peas and ananas and stir everything together.</li>
+        <li>Stir in the coconut milk and let it simmer for about 5 minutes.</li>
+    </ol>
 </body>
 </html>
