--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a><br>
-    <a href="recipes/curry-chicken.html">Curry Chicken with Coconut and Ananas</a>
+    <a href="recipes/curry-chicken.html">Curry Chicken with Coconut and Ananas</a><br>
+    <a href="recipes/kaiserschmarrn.html">Kaiserschmarrn</a>
 </body>
 </html>
